--- a/app/rts_app/templates/authentication/login.html
+++ b/app/rts_app/templates/authentication/login.html
@@ -2,16 +2,20 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
 
 <img class="login-logo" src="{% static 'images/Logos/03_LOGO_RTS.png' %}" alt="Logo" class="login-logo">
+<body>
 <h2>Login</h2>
-<form method="POST" action="{% url 'login' %}">
-    {% csrf_token %}
-    <label>Username:</label>
-    <input type="text" name="username" required>
-    <label>Password:</label>
-    <input type="password" name="password" required>
-    <button type="submit">Login</button>
-</form>
+<div class="login-container">
+    <form method="POST" action="{% url 'login' %}">
+        {% csrf_token %}
+        <label>Username:</label>
+        <input type="text" name="username" required>
+        <label>Password:</label>
+        <input type="password" name="password" required>
+        <button type="submit">Login</button>
+    </form>
+</div>
 {% if error %}
     <p style="color:red;">{{ error }}</p>
 {% endif %}
 <a href="{% url 'register' %}">Register</a>
+</body>
