--- a/app/rts_app/templates/rts_app/navbar.html
+++ b/app/rts_app/templates/rts_app/navbar.html
@@ -7,7 +7,7 @@
         <ul>
             <li><a class="nav-item" href="{% url 'home' %}">Home</a></li> <!-- Verander 'button' naar 'nav-item' -->
             <li><a class="nav-item" href="{% url 'create_article' %}">Input Article</a></li> <!-- Verander 'button' naar 'nav-item' -->
-            <li><a class="nav-item" href="#">Contact</a></li> <!-- Verander 'button' naar 'nav-item' -->
+            <li><a class="nav-item" href="{% url 'stock_page' %}">Stock</a></li> <!-- Verander 'button' naar 'nav-item' -->
             <li><a class="nav-item" href="{% url 'logout' %}">Log Out</a></li> <!-- Verander 'button' naar 'nav-item' -->
         </ul>
     </nav>
