general changes / made the code look a bit cleaner

--- a/app/rts_app/templates/create_article.html
+++ b/app/rts_app/templates/create_article.html
@@ -92,11 +92,11 @@
                 var isClothing = selectedOption.data("clothing") === true;
 
                 if (isClothing) {
-                    $("#size-container").slideDown();   // Show size-container for clothing
-                    $("#quantity-container").slideUp(); // Hide quantity for clothing
+                    $("#size-container").slideDown();   
+                    $("#quantity-container").slideUp(); 
                 } else {
-                    $("#size-container").slideUp();     // Hide size-container for non-clothing
-                    $("#quantity-container").slideDown();// Show quantity for non-clothing
+                    $("#size-container").slideUp();     
+                    $("#quantity-container").slideDown();
                 }
 
                 // Display the selected option next to the dropdown
