--- a/app/rts_app/templates/stock_page.html
+++ b/app/rts_app/templates/stock_page.html
@@ -1,4 +1,4 @@
-<!-- stock_page.html -->
+<!-- UNDER CONSTRUCTION : Still needs to be tested -->
 {% load static %}
 <!DOCTYPE html>
 <html lang="nl">
@@ -18,7 +18,7 @@
     <main class="container mt-4">
         <h2>Stock Overview</h2>
 
-        <!-- Filters -->
+        
         <form method="GET" class="mb-4">
             <div class="form-row">
                 <div class="col">
@@ -53,7 +53,6 @@
             </div>
         </form>
 
-        <!-- Tabel weergave van de voorraad -->
         <table class="table table-bordered">
             <thead>
                 <tr>
